--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body{
     color: black;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-main h2{
+main h1, h2{
     font-family: madera bold;
     color: #373a36;
     clear: both;
@@ -24,7 +24,22 @@ main img{
     height:300px;
     width:450;
 }
-.budget{
+.credit-score-image img{
+    object-fit: cover;
+    height:250px;
+    padding-bottom: 2em;
+}
+.improve-credit-score li{
+    padding-bottom: 0.5em;
+}
+.improve-credit-score a{
+    text-decoration: none;
+    color: #ff510d;
+}
+.improve-credit-score a:hover{
+    text-decoration: underline;
+}
+.budget, .credit-score-about{
     display:grid;
     grid-template-columns: auto auto;
     grid-gap: 4.8em;
@@ -36,8 +51,8 @@ main img{
 main p{
     padding-bottom:0.5em;
 }
-.steps{
-    margin: 0px 20em 2em 20em;
+.improve-credit-score, .financial-education, .steps{
+    margin: 0px 10em 2em 10em;
 }
 
 .steps ol li{
